2008-03-20  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-display.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Use async get property for hint type and is_decorated.
    
    * plugins/opacity/ccm-opacity.c
    * plugins/shadow/ccm-shadow.c: Fix get property handling.
    
    * src/async-getprop.c:
    * src/async-getprop.h: Add ag_task_destroy method.
    
2008-03-19  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/shadow/ccm-shadow.c:
    * src/ccm-display.c:
    * src/ccm-display.h:
    * src/ccm-pixmap-glitz.c:
    * src/ccm-pixmap.c:
    * src/ccm-window.c: Handle better Xerror event.

2008-03-18  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-screen.c:
    * src/ccm.h: Expose find window functions, add activate window function
    * src/ccm-window.c:
    * src/ccm-window.h: Set default window type to normal
    * plugins/mosaic/ccm-mosaic.c: Include only normal window.
    
2008-03-17  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: Add libgtop depends
    * plugins/perf/ccm-perf.c: Show cpu and memory load average.
    * src/ccm-image.c: Fix a shm memory leak.
    * src/ccm-region.c:
    * src/ccm-region.h: Use _cairo_lround instead round and add debug function
                        _ccm_region_print.
    * src/ccm-window.c: Detroy pixmap when window is unmapped to preserve
                        memory.

2008-03-13  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-image.c: Repair all damage region on repair.
    
2008-03-12  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * configure.ac: disable c99 check for now.
    * plugins/Makefile.am:
    * plugins/perf/Makefile.am:
    * plugins/perf/ccm-perf.c:
    * plugins/perf/ccm-perf.h:
    * plugins/perf/ccm-perf.plugin.desktop.in:
    * plugins/perf/ccm-perf.schemas.in:
    * src/ccm-screen.c: Move performance check in a plugin, for now only check
                        FPS.
